objects/ServFattList__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Elenco servizi e relativi serviceCode e recordType.DeveloperName associati</description>
    <fields>
        <fullName>assetDevName__c</fullName>
        <label>assetDevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attBeList__c</fullName>
        <label>attBeList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseCollegamentoDevName__c</fullName>
        <description>RecordType.DeveloperName del case Collegamento</description>
        <label>caseCollegamentoDevName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseDevName__c</fullName>
        <label>caseDevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseRichiestaDevName__c</fullName>
        <defaultValue>&apos;PO_Richiesta_a_servizio_a_fattibilit&apos;</defaultValue>
        <description>RecordType.DeveloperName del case richiesta</description>
        <label>caseRichiestaDevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ceiDevName__c</fullName>
        <label>ceiDevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cessazioneBeList__c</fullName>
        <defaultValue>&apos;Contributo Disattivazione&apos;</defaultValue>
        <label>cessazioneBeList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>externalSystem__c</fullName>
        <label>externalSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oppChildDevName__c</fullName>
        <label>oppChildDevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oppChildName__c</fullName>
        <defaultValue>&apos;Offerta Collegamento&apos;</defaultValue>
        <label>oppChildName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oppChildStageName__c</fullName>
        <defaultValue>&apos;Prospecting&apos;</defaultValue>
        <label>oppChildStageName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oppParentDevName__c</fullName>
        <label>oppParentDevName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oppParentName__c</fullName>
        <defaultValue>&apos;Offerta Totale&apos;</defaultValue>
        <label>oppParentName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oppParentStageName__c</fullName>
        <defaultValue>&apos;Prospecting&apos;</defaultValue>
        <label>oppParentStageName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>ServFattList</label>
</CustomObject>